--- a/test/fixtures/bedrooms.yml
+++ b/test/fixtures/bedrooms.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
+  category: MyString
   description: MyText
+  hotel: one
 
 two:
-  type: 
+  category: MyString
   description: MyText
+  hotel: two
